--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,11 +6,11 @@ kotlin = "2.0.0"
 appcompat = "1.7.0"
 lifecycle = "2.8.3"
 ui = "1.7.0-beta05"
+navigation = "2.7.7"
 ksp = "2.0.0-1.0.23"
 material3 = "1.3.0-beta04"
 activity-compose = "1.9.0"
 lifecycle-runtime = "2.8.3"
-navigation-runtime = "2.7.7"
 compose-navigation = "1.3.1"
 splashscreen = "1.2.0-alpha01"
 animation-android = "1.7.0-beta05"
@@ -26,11 +26,12 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
+androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx", version.ref = "navigation" }
 androidx-compose-navigation = { group = "androidx.wear.compose", name = "compose-navigation", version.ref = "compose-navigation" }
 androidx-animation-android = { group = "androidx.compose.animation", name = "animation-android", version.ref = "animation-android" }
 androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime" }
-androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx", version.ref = "navigation-runtime" }
 androidx-material3-window-size = { group = "androidx.compose.material3", name = "material3-window-size-class", version.ref = "material3" }
 androidx-animation-graphics-android = { group = "androidx.compose.animation", name = "animation-graphics-android", version.ref = "animation-graphics-android" }
 
