--- a/jetutils/src/main/AndroidManifest.xml
+++ b/jetutils/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest>
 
+    <uses-permission name="android.permission.VIBRATE" />
+    <uses-permission name="android.permission.VIBRATE" />
 </manifest>
