--- a/jetutils/src/main/AndroidManifest.xml
+++ b/jetutils/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission name="android.permission.VIBRATE" />
-    <uses-permission name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
