--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ activity-compose = "1.9.0"
 lifecycle-runtime = "2.8.3"
 compose-navigation = "1.3.1"
 splashscreen = "1.2.0-alpha01"
+datastore-preferences = "1.1.1"
 animation-android = "1.7.0-beta05"
 animation-graphics-android = "1.6.8"
 
@@ -31,6 +32,7 @@ androidx-compose-navigation = { group = "androidx.wear.compose", name = "compose
 androidx-animation-android = { group = "androidx.compose.animation", name = "animation-android", version.ref = "animation-android" }
 androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime" }
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore-preferences" }
 androidx-material3-window-size = { group = "androidx.compose.material3", name = "material3-window-size-class", version.ref = "material3" }
 androidx-animation-graphics-android = { group = "androidx.compose.animation", name = "animation-graphics-android", version.ref = "animation-graphics-android" }
 
